--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -28,6 +28,8 @@
         margin-left: 5rem;
     }
 
+    
+
     #img-aside {
         width: 25rem;
         height: 25rem;
@@ -48,6 +50,7 @@
         justify-content: center;
         align-items: center;
     }
+
 
     .i1 {
         top: -30rem;
@@ -87,6 +90,7 @@
     .card2 {
         margin: 2rem;
         margin-top: .5rem;
+
     }
 
     .card {
@@ -103,6 +107,8 @@
 
 @media screen and (max-width : 769px) {
 
+    
+    
     * {
         margin: 0;
         padding: 0;
@@ -141,22 +147,26 @@
     background: #000000;
     right: -100%;
     transition: 350ms;
-    display: none;  
-   }
+    display: none;
+    
+}
 
 #modalContato a {
     color: #ffffff;
     text-decoration: none;
     font-size: 2rem;
-    text-shadow: 0.01rem 0rem 0.1rem;   
-   }
+    text-shadow: 0.01rem 0rem 0.1rem; 
+
+    
+}
 
     #navMenu {
         display: none;
     }
 
     #modalContato {
-        display: flex; 
+        display: flex;
+        
     }
 
     #modalContato .toggle {
@@ -172,12 +182,15 @@
         right: 2rem;
     }
 
+
     #logoImg {
         margin: 0;
+
         margin-top: 1rem;
         margin-right: 32rem;
         display: flex;
         justify-content: flex-start;
+
     }
 
     #headline-h1 {
@@ -197,9 +210,10 @@
 
     #img-gif {
         height: 20rem;
+        width: 15rem;
         background-color: #101013;
         clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-        margin-left: 2rem;
+        
         margin-top: 8rem;
         -moz-transition: all 0.3s;
         -webkit-transition: all 0.3s;
@@ -274,11 +288,12 @@
         margin-top: 2rem;
         padding: 1rem;
         flex-wrap: wrap;
+
     }
 
     #projetos {
         gap: 1rem;
-    }
+}
 
     .card {
         text-align: center;
@@ -350,7 +365,7 @@
         width: 100rem;
         background-size: cover;
         background-repeat: no-repeat;
-        background-image: url(https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg);
+        background-image: url(https://user-images.githubusercontent.com/104698942/210053414-bdf2f60c-8bb9-4e70-b482-471e4a8f05e0.png);
     }
 
     .proje2:hover {
@@ -360,7 +375,7 @@
         width: 100rem;
         background-size: cover;
         background-repeat: no-repeat;
-        background-image: url(https://user-images.githubusercontent.com/104698942/205791409-66cec37f-f766-4c95-919c-8c7a20aa11fc.svg);
+        background-image: url(https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg);
     }
 
     .proje3:hover {
@@ -595,7 +610,7 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(https://user-images.githubusercontent.com/104698942/207024153-de6ce790-42bb-42bf-a7f9-6576032be155.png);
+    background-image: url(https://user-images.githubusercontent.com/104698942/210053414-bdf2f60c-8bb9-4e70-b482-471e4a8f05e0.png);
     
 }
 
