--- a/pagePortifolio/assets/css/style.css
+++ b/pagePortifolio/assets/css/style.css
@@ -45,6 +45,8 @@ h6 {
   background: linear-gradient(0deg, #b509ff, #ff14ff);
   background-repeat: no-repeat;
   width: 60%;
+
+
 }
 /*--------------------------------------------------------------
 # Back to top button
@@ -383,6 +385,126 @@ section {
 /*--------------------------------------------------------------
 # HABILIDADES
 --------------------------------------------------------------*/
+
+#parts-habilidades {
+  display: block;
+  width: 30rem;
+
+}
+
+.partHab  {
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 6rem;
+  margin: 1rem;
+  font-size: 4rem;
+  margin-bottom: 5rem;
+}
+
+.difHab {
+  
+  transform: translateX(100%);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  
+  
+}
+
+.iconsb {
+  transition: .5s;
+
+}
+.iconsb:hover {
+  color: #b509ff;
+  text-shadow: 0.05em 0 0 #3700ff, -0.03em -0.04em 0 #ae00ff,
+        0.025em 0.04em 0 #ffffff;
+    animation: glitch 350ms infinite;
+
+}
+
+.line-hab {
+  width: 90vw;
+  height: 1px;
+  background-color: #b509ff;
+  
+}
+
+#listHab {
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 6rem;
+  row-gap: 3rem;
+  list-style-type: disc;
+}
+
+@keyframes glitch {
+  0% {
+      text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+          0.025em 0.04em 0 #ffffff;
+  }
+
+  15% {
+      text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+          0.025em 0.04em 0 #ffffff;
+  }
+
+  16% {
+      text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
+          -0.05em -0.05em 0 #ffffff;
+  }
+
+  49% {
+      text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
+          -0.05em -0.05em 0 #ffffff;
+  }
+
+  50% {
+      text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
+          0 -0.04em 0 #ffffff;
+  }
+
+  99% {
+      text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
+          0 -0.04em 0 #ffffff;
+  }
+
+  100% {
+      text-shadow: -0.05em 0 0 #00fffc, -0.025em -0.04em 0 #fc00ff,
+          -0.04em -0.025em 0 #ffffff;
+  }
+}
+
+@media (max-width: 1500px) {
+  .partHab {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+  }
+  .difHab{
+    transform: translateX(0);
+  }
+  .line-hab {
+    width: 100vw;
+  }
+  #listHab {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    column-gap: 1rem;
+    row-gap: 3rem;
+  }
+}
+
+
+
+
+
+
 .skills .progress {
   height: 60px;
   display: block;
@@ -541,7 +663,7 @@ section {
   opacity: 1;
   left: 0;
   right: 0;
-  bottom: -60px;
+  bottom: -3.75rem;
   z-index: 3;
   position: absolute;
   transition: all ease-in-out 0.3s;
@@ -551,11 +673,11 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-links a {
   color: #fff;
-  font-size: 28px;
+  font-size: 1.75rem;
   text-align: center;
   background: #d981ff;
   transition: 0.3s;
-  width: 50%;
+  width: 100%;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
@@ -578,6 +700,7 @@ section {
   opacity: 1;
   bottom: 0;
 }
+
 
 .sizeimg {
   width: 30rem;
@@ -646,6 +769,7 @@ section {
 --------------------------------------------------------------*/
 .contact {
   padding-bottom: 130px;
+  background-color:#f5f8fd ;
 }
 
 .contact .info {
